# mandelbrot-set

./: .gitignore  .gitmodules  CMakeLists.txt  MandelbrotSet.sln  README.md
MandelbrotSet/: MandelbrotSet.vcxproj  MandelbrotSet.vcxproj.filters  fragment.glsl  main.cpp  shader.h  vertex.glsl
mandelbrot-set/: CMakeLists.txt  main.cc
mandelbrot-set/shaders/: mandelbrot.frag  mandelbrot.vert
mandelbrot-set/wrapper/: shader.cc  shader.h
submodules/: CMakeLists.txt
submodules/glad/: CMakeLists.txt
submodules/glad/include/glad/: gl.h
